[gd_scene load_steps=2 format=3 uid="uid://c2title0001"]

[ext_resource type="Script" path="res://scripts/lobby/title_screen.gd" id="1_title"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_title")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="TopSpacer" type="Control" parent="VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 150)

[node name="Title" type="Label" parent="VBox"]
layout_mode = 2
text = "限定ジャンケン"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Subtitle" type="Label" parent="VBox"]
layout_mode = 2
text = "- ONLINE -"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer1" type="Control" parent="VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 80)

[node name="NameLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "プレイヤー名"
horizontal_alignment = 1

[node name="NameMargin" type="MarginContainer" parent="VBox"]
layout_mode = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_right = 100

[node name="NameInput" type="LineEdit" parent="VBox/NameMargin"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 60)
placeholder_text = "名前を入力..."
alignment = 1
max_length = 20

[node name="Spacer2" type="Control" parent="VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 40)

[node name="ButtonMargin" type="MarginContainer" parent="VBox"]
layout_mode = 2
theme_override_constants/margin_left = 80
theme_override_constants/margin_right = 80

[node name="ConnectButton" type="Button" parent="VBox/ButtonMargin"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 70)
text = "接続する"

[node name="Spacer3" type="Control" parent="VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 30)

[node name="StatusLabel" type="Label" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
text = ""
horizontal_alignment = 1
